bugfixes and skills look good on mobile

--- a/styles/SkillsContainer.module.css
+++ b/styles/SkillsContainer.module.css
@@ -1,7 +1,7 @@
 .skillsContainer {
     display: flex;
     flex-direction: column;
-    margin: 21px 0;
+    margin: 18px 0 30px 0;
     align-items: center;
 }
 
